# NexusLM

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
customer_service/: agent.py  config.py  prompts.py
customer_service/entities/: customer.py
customer_service/shared_libraries/: callbacks.py
customer_service/tools/: tools.py
